# vdex-programs

./: .eslintrc.js  .gitignore  .prettierrc.js  Anchor.toml  README.md  global.d.ts  jest.config.js  jestSetup.ts  package-lock.json  package.json
programs/dex-program/: Cargo.toml
programs/dex-program/src/: errors.rs  lib.rs
programs/dex-program/src/collections/: event_queue.rs  mod.rs  orderbook.rs  single_event_queue.rs  small_list.rs
programs/dex-program/src/dex/: add_asset.rs  add_market.rs  add_user_page.rs  event.rs  feed_mock_oracle_price.rs  feed_price.rs  init_dex.rs  mod.rs  (+10 more)
programs/dex-program/tests/: test_add_liquidity.rs  test_add_user_page.rs  test_ask_order.rs  test_bid_cancel.rs  test_bid_order.rs  test_cancel_all.rs  test_cancel_ask.rs  test_cancel_bid.rs  test_cancel_filled_order.rs  test_cancel_loop.rs  test_claim_rewards.rs  test_close_associate_account.rs  test_close_size.rs  test_close_with_loss.rs  test_close_with_profit.rs  test_close_zero_pnl.rs  test_compound.rs  test_context.rs  test_crank_ask_order.rs  test_crank_ask_order_with_invalid_user_mint_acc.rs  test_crank_bid_order.rs  test_crank_bid_order_insufficient_fund.rs  test_create_user_state.rs  test_di_buy.rs  test_di_create.rs  test_di_init.rs  test_di_remove.rs  test_di_set_settle_price.rs  test_di_settle.rs  test_di_settle_with_invalid_user_mint_acc.rs  test_di_update.rs  test_fill.rs  test_global_position.rs  test_market_swap.rs  test_merge_positions.rs  test_open_basic.rs  test_open_fail_minimum.rs  test_open_long_with_swap.rs  test_open_position.rs  test_open_short_with_swap.rs  (+3 more)
(+117 files in other folders)
